# iAmFaster

./: .env.example  .gitignore  Cargo.toml  README.md
bench/: e2e_p95.csv  lookup_p95.csv
src/: cache.rs  config.rs  handler.rs  inflight.rs  main.rs  proxy.rs  store.rs  watcher.rs
