[package]
name = "iamfaster"
version = "0.1.0"
edition = "2021"

[dependencies]
axum              = "0.8"
tokio             = { version = "1", features = ["full"] }
reqwest           = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
moka              = { version = "0.12", features = ["future"] }
bytes             = "1"
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
sonic-rs          = "0.3"
dotenvy           = "0.15"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
futures-util      = "0.3"
dashmap           = "6"
socket2           = { version = "0.5", features = ["all"] }
mimalloc          = { version = "0.1", default-features = false }
tower             = "0.5"
http              = "1"
tracing           = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow             = "1"
redb               = "2"

[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
panic         = "abort"
strip         = true
